[gd_scene load_steps=6 format=3 uid="uid://ccqoreueuxdb7"]

[ext_resource type="Script" path="res://HUD.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cho1t5qw6ma6h" path="res://submitScore.tscn" id="2_61xdc"]
[ext_resource type="PackedScene" uid="uid://l6rc3j5mce5s" path="res://leader_board.tscn" id="3_mui4g"]

[sub_resource type="InputEventAction" id="InputEventAction_fopy7"]
action = &"start_game"

[sub_resource type="Shortcut" id="4"]
events = [SubResource("InputEventAction_fopy7")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -79.5
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Dodge the
Creeps"
horizontal_alignment = 1

[node name="DebugLabel" type="Label" parent="."]
visible = false
offset_top = 454.0
offset_right = 480.0
offset_bottom = 514.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "DEBUG"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -200.0
offset_right = 90.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 60
shortcut = SubResource("4")
text = "Start"

[node name="ResetButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.404167
anchor_top = 0.915278
anchor_right = 0.595833
anchor_bottom = 0.958333
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Reset Data"
metadata/_edit_use_anchors_ = true

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="SubmitScore" parent="." instance=ExtResource("2_61xdc")]
visible = false

[node name="LeaderBoard" parent="." instance=ExtResource("3_mui4g")]
visible = false

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="visibility_changed" from="SubmitScore" to="." method="_on_submit_score_visibility_changed"]
